--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 			          gridlines: {count: 10}
 			        },
 			        vAxis: {
-			          title: 'Occurances',
+			          title: 'Occurences',
 			          gridlines : {
 			          	color: 'transparent'
 			          }
