--- a/index.html
+++ b/index.html
@@ -144,19 +144,20 @@
 				var text_raw = document.getElementById('input_text').value; // Get the input text
 				if(text_raw == ""){ alert("You have not entered any text."); return; } // Handle case when user fails to enter text
 				var text_trimmed = text_raw.trim(); // Remove redundant whitespace
-				var word_array = text_trimmed.split(" "); // Our array of words
+				var word_array = text_trimmed.split(/\s+/); // Our array of words
 				var array_length = word_array.length;
 				$('#frequency_chart').show();
 
 				// Place the count of each word in the Object lookup_table
 				for(var i = 0; i < array_length; ++i){
 					var clean_string = word_array[i].replace(/(^[\(\"\']+|[\,\.!?\)\'\"]+$)/g,''); // Remove any leading or trailing punctuation
-					if(clean_string in lookup_table){
+					var new_string = clean_string[0].toUpperCase() + clean_string.substr(1); // Format every word to begin with a capital letter
+					if(new_string in lookup_table){
 					// If the word is already in our dictionary, increment it's value by one
-						lookup_table[clean_string] += 1; 
+						lookup_table[new_string] += 1; 
 					} else {
 					// If the word is not in our dictionary, add it with an initial value of one
-						lookup_table[clean_string] = 1;
+						lookup_table[new_string] = 1;
 					}
 				};
 
